# knit_graph

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  deps.yml  docs.yml  release.yml
docs/source/: conf.py  index.rst  installation.rst
docs/source/api/: modules.rst  your_project_name.rst
examples/: visualize_basic_knit_graphs.ipynb
src/knit_graphs/: Course.py  Knit_Graph.py  Knit_Graph_Visualizer.py  Loop.py  Pull_Direction.py  Yarn.py  _base_classes.py  basic_knit_graph_generators.py  course_face.py  directed_loop_graph.py  knit_graph_builder.py  loop_sequence.py
src/knit_graphs/artin_wale_braids/: Crossing_Direction.py  Loop_Braid_Graph.py  Wale.py  Wale_Braid.py  Wale_Braid_Word.py  Wale_Group.py
src/knit_graphs/knit_graph_errors/: knit_graph_error.py
src/knit_graphs/knit_graph_generators/: basic_knit_graph_generators.py
src/knit_graphs/knit_graph_visualizer/: Knit_Graph_Visualizer.py  Stitch_Visualizer.py
tests/: test_Knit_Graph.py  test_Knit_Graph_Visualizer.py  test_Stitch_Visualizer.py  test_Wale_Group.py  test_course.py
