# =============================================================================
# POETRY BUILD SYSTEM CONFIGURATION
# =============================================================================
# This section tells Poetry how to build your package
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]  # Poetry build backend version
build-backend = "poetry.core.masonry.api"  # Use Poetry's build system

# =============================================================================
# PROJECT METADATA AND CONFIGURATION
# =============================================================================
# All the information about your project that will appear on PyPI
[tool.poetry]
name = "knit-graphs"
version = "0.0.12"
description = "A graph representation of knitted structures where each loop is a node and edges represent yarn and stitch relationships."
authors = ["Megan Hofmann <m.hofmann@northeastern.edu>"]
maintainers = ["Megan Hofmann <m.hofmann@northeastern.edu>"]
license = "MIT"                     # License type (shows up on PyPI)
readme = "README.md"                # File to use as long description on PyPI
homepage = "https://mhofmann-khoury.github.io/knit_graph/"
repository = "https://github.com/mhofmann-Khoury/knit_graph/"
documentation = "https://mhofmann-khoury.github.io/knit_graph/"
keywords = [
    "ACT Lab",
    "Northeastern University",
    "knit",
    "machine knit",
    "fabrication",
    "textile"]
classifiers = [                     # PyPI classifiers for categorization
    "Development Status :: 3 - Alpha",                     # Update as project matures (Alpha -> Beta -> Production/Stable)
    "Natural Language :: English",                         # Human language
    "Intended Audience :: Developers",                     # Add other audiences if relevant
    "License :: OSI Approved :: MIT License",              # Update if using different license
    "Operating System :: OS Independent",                  # Platform support
    "Programming Language :: Python :: 3",                # Python support
    "Programming Language :: Python :: 3.11",             # Update supported Python versions
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",             # Latest Python version
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",                                     # Signals type hint support
]

# =============================================================================
# PACKAGE STRUCTURE CONFIGURATION
# =============================================================================
# Tell Poetry where to find your Python packages in your repository
packages = [
    {include = "knit_graphs", from = "src"},
]

# =============================================================================
# FILES TO INCLUDE/EXCLUDE IN DISTRIBUTION
# =============================================================================
# Include additional files when building the package for distribution
include = [
    "README.md",                    # Project description
    "LICENSE",                      # License file
    "docs/**/*",                    # All documentation files
    "src/knit_graphs/py.typed",     # PEP 561 marker for type information
]

# Exclude files from the distribution package (keeps package size down)
exclude = [
    "tests/**/*",                   # Don't include test files in distribution
    "docs/_build/**/*",             # Don't include built documentation
    "*.pyc",                        # No compiled Python files
    "__pycache__/**/*",             # No Python cache directories
    ".coverage",                    # No coverage data files
    "htmlcov/**/*",                 # No coverage HTML reports
    ".git/**/*",                    # No git files
    ".github/**/*",                 # No GitHub workflow files
    ".pytest_cache/**/*",           # No pytest cache
    ".mypy_cache/**/*",             # No MyPy cache
    "*.egg-info/**/*",              # No build artifacts
    "dist/**/*",                    # No distribution files
]

# =============================================================================
# RUNTIME DEPENDENCIES
# =============================================================================
# These are packages your project needs to run in production
[tool.poetry.dependencies]
python = ">=3.11,<3.14"
networkx = ">=3.5"
plotly = ">=6.3.0"

# =============================================================================
# DEVELOPMENT DEPENDENCIES
# =============================================================================
# These packages are only needed during development and testing
[tool.poetry.group.dev.dependencies]
importlib-resources = ">=6.5.2"
coverage = "^7.3.0"
black = "^24.10.0"
ruff = "^0.7.4"
isort = "^5.13.2"
mypy = "^1.13.0"
pre-commit = "^3.8.0"
twine = "^5.1.0"

# =============================================================================
# DOCUMENTATION-SPECIFIC DEPENDENCIES
# =============================================================================
# Separate dependency group for building documentation (allows selective installation)
[tool.poetry.group.docs.dependencies]
sphinx = "^7.4.0"
sphinx-rtd-theme = "^3.0.0"
sphinx-autoapi = "^3.4.0"
myst-parser = "^4.0.0"

# =============================================================================
# BLACK CODE FORMATTER CONFIGURATION
# =============================================================================
[tool.black]
line-length = 120
target-version = ["py311"]
extend-exclude = "tests"

# =============================================================================
# RUFF LINTER CONFIGURATION
# =============================================================================
[tool.ruff]
line-length = 120
target-version = "py311"

exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "docs",
    "tests",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]

ignore = [
    "E501",   # Line too long (handled by Black)
    "E741",   # Ambiguous variable name (l, O, I) - allow single-letter loop variables
    "N801",   # CapWords convention ignored
    "N999",   # Module name conventions ignored
    "UP038",  # Use older isinstance tuple syntax for mypy compatibility
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # Allow assert statements in tests
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# ISORT IMPORT SORTER CONFIGURATION
# =============================================================================
[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["knit_graphs"]
skip_glob = ["tests/*"]

# =============================================================================
# MYPY STATIC TYPE CHECKER CONFIGURATION
# =============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = false
warn_unreachable = true
strict_equality = true
show_error_codes = true
ignore_missing_imports = true
allow_redefinition = true
allow_untyped_globals = true
implicit_reexport = true

disable_error_code = [
    "attr-defined",
    "no-redef",
]

exclude = [
    "tests/",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false

# =============================================================================
# COVERAGE.PY CONFIGURATION
# =============================================================================
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/.venv/*",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false
skip_empty = true
