# =============================================================================
# POETRY BUILD SYSTEM CONFIGURATION
# =============================================================================
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# =============================================================================
# PROJECT METADATA AND CONFIGURATION
# =============================================================================
[tool.poetry]
name = "knit-graphs"
version = "0.1.3"
description = "A graph representation of knitted structures where each loop is a node and edges represent yarn and stitch relationships."
authors = ["Megan Hofmann <m.hofmann@northeastern.edu>"]
maintainers = ["Megan Hofmann <m.hofmann@northeastern.edu>"]
license = "MIT"
readme = "README.md"
homepage = "https://mhofmann-khoury.github.io/knit_graph/"
repository = "https://github.com/mhofmann-Khoury/knit_graph/"
documentation = "https://mhofmann-khoury.github.io/knit_graph/"
keywords = [
    "ACT Lab",
    "Northeastern University",
    "knit",
    "machine knit",
    "fabrication",
    "textile"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]

# =============================================================================
# PACKAGE STRUCTURE CONFIGURATION
# =============================================================================
packages = [
    {include = "knit_graphs", from = "src"},
]

# =============================================================================
# FILES TO INCLUDE/EXCLUDE IN DISTRIBUTION
# =============================================================================
include = [
    "README.md",
    "LICENSE",
    "docs/**/*",
    "src/knit_graphs/py.typed",
]

exclude = [
    "tests/**/*",
    "docs/_build/**/*",
    "*.pyc",
    "__pycache__/**/*",
    ".git/**/*",
    ".github/**/*",
    ".pytest_cache/**/*",
    ".mypy_cache/**/*",
    "*.egg-info/**/*",
    "dist/**/*",
]

# =============================================================================
# RUNTIME DEPENDENCIES
# =============================================================================
[tool.poetry.dependencies]
python = ">=3.11,<3.14"
networkx = ">=3.5"

# =============================================================================
# OPTIONAL: JUPYTER NOTEBOOK SUPPORT
# =============================================================================
[tool.poetry.extras]
notebook = ["jupyter"]

[tool.poetry.group.notebook]
optional = true

[tool.poetry.group.notebook.dependencies]
jupyter = "^1.0.0"
referencing = "<0.36.0"
jsonschema = "<4.24.0"

# =============================================================================
# DEVELOPMENT DEPENDENCIES
# =============================================================================
[tool.poetry.group.dev.dependencies]
black = "^26.3.1"
ruff = "^0.7.4"
isort = "^5.13.2"
mypy = "^1.13.0"
pre-commit = "^3.8.0"

# =============================================================================
# DOCUMENTATION-SPECIFIC DEPENDENCIES
# =============================================================================
[tool.poetry.group.docs.dependencies]
sphinx = "^7.4.0"
sphinx-rtd-theme = "^3.0.0"
sphinx-autoapi = "^3.4.0"
myst-parser = "^4.0.0"

# =============================================================================
# BLACK CODE FORMATTER CONFIGURATION
# =============================================================================
[tool.black]
line-length = 200
target-version = ["py311"]
extend-exclude = "tests"

# =============================================================================
# RUFF LINTER CONFIGURATION
# =============================================================================
[tool.ruff]
line-length = 200
target-version = "py311"

exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "docs",
    "tests",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]

ignore = [
    "E501",   # Line too long (handled by Black)
    "E741",   # Ambiguous variable name (l, O, I)
    "N801",   # CapWords convention ignored
    "N999",   # Module name conventions ignored
    "UP038",  # Use older isinstance tuple syntax for mypy compatibility
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # Allow assert statements in tests
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# =============================================================================
# ISORT IMPORT SORTER CONFIGURATION
# =============================================================================
[tool.isort]
profile = "black"
line_length = 200
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["knit_graphs"]
skip_glob = ["tests/*"]

# =============================================================================
# MYPY STATIC TYPE CHECKER CONFIGURATION
# =============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = false
warn_unreachable = true
strict_equality = true
show_error_codes = true
ignore_missing_imports = true
allow_redefinition = true
allow_untyped_globals = true
implicit_reexport = true

disable_error_code = [
    "attr-defined",
    "no-redef",
]

exclude = [
    "tests/",
]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
